--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    overflow: hidden;
     background-color: #f0f0f0; /* Cor de fundo (opcional) */
 }
   .navbar{
@@ -49,6 +50,7 @@
     width: 100%;
     height: 100%;
     border: none;
+    overflow: hidden;
 }
 
 .iframe-wp {
