--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,75 @@
 *{
-    margin:0px;
-    padding: 1px;
-    box-sizing: border-box;
-    outline: none;
-    font-family:Verdana, Arial, Helvetica, sans-serif;
-  }
-  
-  body {
-    margin: 40px;
-    padding: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    background-color: #f0f0f0; /* Cor de fundo (opcional) */
+  margin:0px;
+  padding: 1px;
+  box-sizing: border-box;
+  outline: none;
+  font-family:Verdana, Arial, Helvetica, sans-serif;
 }
-  .navbar{
-    display: flex;
-    position: fixed;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 55px;
-    top: 0;
-    left: 0;
-    background-color: #3C8DBC;
-    padding-left: 6rem;
-    z-index: 1000;
-  }
-  .profile{
-    height: -20px;
-    width: 200px;
-    object-fit: cover;
-   
-  }
-  .iframe-container {
-    display: flex;
-    box-sizing: border-box;
-    overflow: hidden;
-    max-width: 800px; /* Largura máxima do contêiner  */
-    width: 100vw;
+
+body {
+  margin: 40px;
+  padding: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  background-color: #f0f0f0; /* Cor de fundo (opcional) */
+}
+.navbar{
+  display: flex;
+  position: fixed;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 55px;
+  top: 0;
+  left: 0;
+  background-color: #3C8DBC;
+  padding-left: 6rem;
+  z-index: 1000;
+}
+.profile{
+  height: -20px;
+  width: 200px;
+  object-fit: cover;
+ 
 }
 
 .iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border: none;
+overflow: hidden;
+}
+
+#card {
+width: 300px;
+padding: 30px;
+position: absolute; /* Posiciona o card em relação à janela do navegador */
+top: 70px; /* Distância do topo da janela */
+right: 20px; /* Distância da direita da janela */
+justify-content: space-around;
+background-color: #ffffff;
+box-sizing: border-box;
+border: 1px solid #d2d2d3;
+border-radius: 5px;
+box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+border-left: 7px solid #759ac0;
+}
+
+/* Estilos para o container da tela 2 */
+.tela2-container {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 120px;
+    left: 50px;
     width: 100%;
     height: 100%;
     border: none;
     overflow: hidden;
 }
 
-.iframe-wp {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
 
-.iframe {
-  width: 100%;
-  height: 100%;
-}
-style attribute {
-  position: relative;
-  overflow: hidden;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  width: 670px;
-  height: 465px;
-  text-align: left;
-  line-height: normal;
-  z-index: 0;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
