--- a/css/style.css
+++ b/css/style.css
@@ -72,4 +72,11 @@ border-left: 7px solid #759ac0;
     overflow: hidden;
 }
 
-
+.responsive-iframe-container iframe {
+  position: absolute;
+  top: 30;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
