--- a/css/style.css
+++ b/css/style.css
@@ -62,14 +62,14 @@ border-left: 7px solid #759ac0;
 }
 
 .tela2-container {
-  position: absolute;
-  top: 120px;
-  left: 50px;
-  width: 100%;
-  height: 100%;
-  border: none;
-  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh; /* Ajuste a altura conforme necessário */
+  width: 80vw; /* Ajuste a largura conforme necessário */
+  padding-top: 20px; /* Adicione espaço superior conforme necessário */
 }
+
 
 .responsive-iframe-container iframe {
 position: absolute;
